# Shadow-Oak-summer-sprint-2026

./: .gitattributes  .gitignore  DAILY_LOG.md  README.md  pytest.ini
_here_check/projects/S1-P2_nifftyvault/: README.md  pyproject.toml
_here_check/projects/S1-P2_nifftyvault/src/nifftyvault/: dashboard.py  data.py  visualization.py
_here_check/projects/S1-P2_nifftyvault/tests/: conftest.py  test_config.py  test_data.py  test_visualization.py
_here_check/projects/S1-P3_oakledger/: CHANGELOG.md  pyproject.toml
_here_check/projects/S1-P3_oakledger/src/oakledger/: __init__.py  analytics.py  cli.py  config.py  seed-data.py
_here_check/projects/S1-P3_oakledger/tests/: test_analytics.py
_here_check/projects/S1-P4_stats_library/: README.md  pyproject.toml
_here_check/projects/S1-P4_stats_library/scripts/: apply_to_nifty.py  dashboard.py  fix_encoding.ps1
_here_check/projects/S1-P4_stats_library/src/quant_stats/: hypothesis_tests.py  ratios.py
_here_check/projects/S1-P4_stats_library/tests/: conftest.py
_here_check/projects/calculator/: README.md
_here_check/projects/emoji_converter/: README.md  emoji_converter.py
_here_check/projects/list_analyzer/: README.md
_here_check/projects/portfolio-audit/: PORTFOLIO_AUDIT.md  README.md
_here_check/projects/rps/: README.md
_here_check/projects/sovereignfinance/: CONTRIBUTING.md  pyproject.toml
_here_check/projects/sovereignfinance/src/sovfin/: __init__.py  cli.py  database.py
_here_check/projects/sovereignfinance/tests/: test_config.py  test_seed_data.py
code/s1-p3-trading-journal/: schema.sql
daily_log/: day1.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day2.md  day20.md  day21.md  day22.md  day23.md  day24.md  day3.md  day4.md  day5.md  day6.md  day7.md  day8.md  day9.md
daily_log/journals/: sunday_week2.md  sunday_week3.md  week1_sunday_25jun.md  week2_finance_notes.md  week2_sunday_03jul.md
docs/: stats_notes.md
docs/journal/: Summersprint.docx
language_python/: RPS_game.py  calculator.py  day1_python.py  day2_python.py  day4_python.py  emoji_converter.py  numpy_demo.py  pandas_demo.py  personal_finance_tracker.py  yfinance_test.py
learning/: calculator.py  day1_python.py  day2_python.py  day3_python.py  day4_python.py  day5_python.py  day6_python.py  day7_python.py  numpy_demo.py  oop_demo.py  pandas_demo.py  quant_stats.py  s1_p1_tracker.py  s1_p2_downloader.py  s1_p3_journal.py  stats_finance_notes.py  test_quant_stats.py  yfinance_test.py
papers/paper1/: paper1_draft.html  paper1_draft.md
projects/S1-P2_marketvault/: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml  verify_refactoring.py
projects/S1-P2_marketvault/src/marketvault/: __init__.py  dashboard.py  visualize.py
projects/S1-P2_marketvault/tests/: test_analysis.py
projects/S1-P2_nifftyvault/: pyproject.toml
projects/S1-P2_nifftyvault/.github/workflows/: ci.yml
projects/S1-P2_nifftyvault/src/nifftyvault/: __init__.py  analysis.py  config.py  dashboard.py  downloader.py
projects/S1-P3_oakledger/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
projects/S1-P3_oakledger/.github/workflows/: ci.yml
projects/S1-P3_oakledger/src/oakledger/: __init__.py  analytics.py  cli.py  dashboard.py  seed-data.py
projects/S1-P3_oakledger/tests/: conftest.py  test_analytics.py
projects/S1-P4_stats_library/: pyproject.toml
projects/S1-P4_stats_library/scripts/: apply_to_nifty.py  dashboard.py  fix_encoding.py
projects/S1-P4_stats_library/src/quant_stats/: __init__.py  hypothesis_tests.py  ratios.py
projects/S1-P4_stats_library/tests/: conftest.py  test_hypothesis_tests.py  test_ratios.py
projects/beginner-projects/: README.md
projects/calculator/: calculator.py
projects/github-org-standard/: README.md  README_GITHUB_ORG_STANDARD.md  standardize_readme_checklist.py
projects/list_analyzer/: list_analyzer.py
projects/nifftyvault/: CONTRIBUTING.md  LICENSE  README.md  analyzer.py  downloader.py  pyproject.toml  requirements.txt  verification.txt  visualize.py
projects/nifftyvault/docs/: architecture_overview.md
projects/nifftyvault/src/nifftyvault/: analyzer.py
projects/nifftyvault/src/nifftyvault.egg-info/: PKG-INFO
projects/oakledger/: pyproject.toml
projects/oakledger/src/oakledger/: __init__.py  analytics.py  cli.py  config.py  dashboard.py
projects/oakledger/tests/: test_analytics.py
projects/rps/: RPS_game.py
projects/s1-p3-trading-journal/: cli.py
projects/sovereignfinance/: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  dashboard.py  pyproject.toml  requirements.txt  seed_data.py
projects/sovereignfinance/src/sovfin/: __init__.py  cli.py  config.py  dashboard.py  database.py  validation.py
projects/sovereignfinance/tests/: conftest.py  test_cli.py  test_config.py  test_dashboard.py  test_database.py  test_seed_data.py  test_validation.py
scripts/: verify.ps1
