[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marketvault"
version = "1.0.0"
description = "Live NSE + global market dashboard and strategy builder"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Ryan Kaushal", email = "shadow17ai@gmail.com"}]
dependencies = [
    "pandas>=2.0.0",
    "yfinance>=0.2.0",
    "matplotlib>=3.5.0",
]
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
disable_error_code = ["import-untyped"]
[[tool.mypy.overrides]]
module = ["yfinance.*", "plotly.*"]
ignore_missing_imports = true
