[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oakledger"
version = "0.1.0"
description = "Trading journal for logging and analysing paper trades"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OakLedger Contributors"}
]

dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/oakledger/seed-data.py" = ["E501"]
"src/oakledger/dashboard.py" = ["E501"]
"src/oakledger/cli.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--strict-markers", "--disable-warnings"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
